# TreinamentoESP32_SMP3011

./: Projeto Integrador - 2026 1 1.docx  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  index.html  main.c  main_source.txt  sobre.html
